Depreciate keybind utils, working on new one