@@ -5,7 +5,7 @@ import me.dueris.genesismc.factory.CraftApoli;
 import me.dueris.genesismc.registry.OriginContainer;
 import me.dueris.genesismc.registry.PowerContainer;
 import me.dueris.genesismc.util.ChatFormatter;
-import me.dueris.genesismc.util.KeybindingUtils;
+import me.dueris.genesismc.util.LegacyKeybindingUtils;
 import me.dueris.genesismc.util.LangConfig;
 import me.dueris.genesismc.util.entity.OriginPlayerAccessor;
 import net.kyori.adventure.text.Component;
@@ -194,8 +194,8 @@ public class ScreenNavigator implements Listener {
 
                         ItemMeta meta = originPower.getItemMeta();
                         meta.displayName(ChatFormatter.apply(powerContainers.get(0).getName()));
-                        if(KeybindingUtils.renderKeybind(powerContainers.get(0)).getFirst()){
-                            meta.displayName(Component.text().append(meta.displayName()).append(Component.text(" ")).append(Component.text(KeybindingUtils.translateOriginRawKey(KeybindingUtils.renderKeybind(powerContainers.get(0)).getSecond())).color(TextColor.color(32222))).build());
+                        if(LegacyKeybindingUtils.renderKeybind(powerContainers.get(0)).getFirst()){
+                            meta.displayName(Component.text().append(meta.displayName()).append(Component.text(" ")).append(Component.text(LegacyKeybindingUtils.translateOriginRawKey(LegacyKeybindingUtils.renderKeybind(powerContainers.get(0)).getSecond())).color(TextColor.color(32222))).build());
                         }
                         meta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
                         meta.lore(ChatFormatter.apply(cutStringIntoLines(powerContainers.get(0).getDescription())));
